--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A three.js camera that mimics 2d maps navigation with pan and zoom",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "browserify demo/index.js > demo/bundle.js"
   },
   "keywords": [
     "three.js",
@@ -21,5 +22,12 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/anvaka/three.map.control"
+  },
+  "dependencies": {
+    "ngraph.events": "0.0.4",
+    "wheel": "0.0.4"
+  },
+  "devDependencies": {
+    "three": "^0.79.0"
   }
 }
